--- a/7.5.ControlRemotoImpresora.md
+++ b/7.5.ControlRemotoImpresora.md
@@ -2,14 +2,16 @@
 
 ![Octoprint](./images/logo_octoprint.png)
 
+[Octoprint](https://octoprint.org/) es un software de control remoto de impresoras 3D vía Web. Es OpenSource, creado por [Gina Häußge](https://www.linkedin.com/in/ginahaeussge)
 
-¿Qué e? ¿para qué sirve?
+¿Qué es? ¿para qué sirve?
 
 ¿Ventajas?
 
-[![Vídeo: 7.5 Controla remotamente tu impresora 3D con Octoprint](https://img.youtube.com/vi/KG4GZrNn_8I/0.jpg)](https://drive.google.com/file/d/1gJnPL1Kye6U8BzvSHqRzxBFAvbL2Tn1M/view?usp=sharing)
+[![Vídeo: 7.5.1 Controla remotamente tu impresora 3D con Octoprint](https://img.youtube.com/vi/kLuuMpX4i9w/0.jpg)](https://drive.google.com/file/d/1eOzrLx6OO-g5A0Qr4-20FlsI6U4BntKe/view?usp=sharing)
 
-[Vídeo: 7.5 Controla remotamente tu impresora 3D con Octoprint](https://drive.google.com/file/d/1gJnPL1Kye6U8BzvSHqRzxBFAvbL2Tn1M/view?usp=sharing)
+
+[Vídeo: 7.5.1 Controla remotamente tu impresora 3D con Octoprint](https://drive.google.com/file/d/1eOzrLx6OO-g5A0Qr4-20FlsI6U4BntKe/view?usp=sharing)
 
 Podemos utilizar cualquier ordenador, pero en mi caso usaré una Raspberry:
 
@@ -44,6 +46,46 @@ Ahora al arrancar se conectará y nos mostrará en pantalla la ip
 ![Aranque de optoprint](./images/octopi_boot.jpg)
 
 También podemos acceder desde el nombre [http://octopi.local](http://octopi.local)
+
+### Primera configuración
+
+* Como en toda Raspberry tendremos acceso desde la consola y ssh con pi/raspberry
+* Entramos a [http://octopi.local](http://octopi.local)
+* Establecemos un usuario y contraseña para acceso vía Web
+* Activamos si queremos las estadísticas anónimas de uso 
+* Configuramos la frecuencia de la comprobación de conectividad y actualizaciones.
+* Configuramos también si queremos usar la Lista negra de plugins, para evitar que se instalen plugins no autorizados.
+* Por último configuramos nuestra impresora:
+  * Nombre del perfil
+  * Forma: cuadrada o circular
+  * Origen (Home)
+  * Si tiene base caliente
+  * Si está dentro de una caja
+  * Tamaño de impresión
+  * En la pestaña de "Axes" configuramos las velocidades, que dejaremos por defecto
+  * En la pestaña "Hotend & extruder" configuramos el nº de extrusores y el tamaño de la boquilla.
+* Por último nos muestra las recomendaciones de uso: 
+  * Por seguridad no deberíaos dejar desatendida nuestra impresora mientras imprime.
+  * No debemos dejar accesible el servidor desde internet.
+
+Si nos gusta el Octoprint y lo encontramos práctico podemos [donar al proyecto](https://octoprint.org/support-octoprint/)
+
+[![Vídeo: 7.5.3 Configuración de Octoprint](https://img.youtube.com/vi/Ti0auAveWlA/0.jpg)](https://drive.google.com/file/d/1TYERg2G9pl07Pw9yLjpjs26UdX1ees23/view?usp=sharing)
+
+[Vídeo: 7.5.3 Configuración de Octoprint](https://drive.google.com/file/d/1TYERg2G9pl07Pw9yLjpjs26UdX1ees23/view?usp=sharing)
+
+### Uso de octoprint
+
+Cuando accedemos a octoprint [http://octopi.local](http://octopi.local), nos podemos encontrar que tenemos actualizaciones pendientes. Pulsamos para actualizar y tras la descarga, se instalan y se reinicia con la nueva versión.
+
+
+Al acceder a Octoprint tenemos:
+
+1. En el lateral el estade conexión de la impresora
+
+vemos que aparecen varias pestañas:
+* Temperatura: donde veremos las temperaturas actuales y las previstas
+* Control: con una imagen central de la cámara y 
 
 
 ### Plugins
