--- a/6.0.1.TestCalidad.md
+++ b/6.0.1.TestCalidad.md
@@ -41,6 +41,10 @@ Si al imprimirlo vemos que las articulaciones no se mueven, podemos ir aplicando
 
 Si la configuración no es adecuada, por ejemplo una temperatura excesiva, las piezas internas pueden quedar soldadas, impidiendo una buena articulación.
 
+Otro modelo de piezas móviles clásico es la [llave inglesa de Daniel Noree](https://www.thingiverse.com/thing:139268)
+
+![Llave inglesa con piezas móviles](./images/llaveInglesaMovil.jpg)
+
 ### Modelos para ajustar la calidad
 
 También existen modelos pensados para afinar la configuración de algún parámetro concreto, y que nos permiten por medio de la experimentación encontrar el valor óptimo.
