--- a/7.4.0.Mantenimiento.md
+++ b/7.4.0.Mantenimiento.md
@@ -1,12 +1,4 @@
-# Mantenimiento básico de una impresora 3D
-
-Limpieza
-Engrasado
-Ajustes
-Tensión de las correas
-
-
-## Decálogo del mantenimiento
+## Decálogo del mantenimiento preventivo
 
 ![Licencia CC by SA](./images/CCbySQ_88x31.png) by José Andrés de @cantabRobots
 
