--- a/9.4.Blender.md
+++ b/9.4.Blender.md
@@ -158,6 +158,8 @@ Pulsamos N para ver propiedades y en Imágenes de fondo marcamos cada una de las
 
 ## Documentación
 
+![](./images/blender-infographic-1280-SM.png)
+
 [Chuletario de Blender](http://www.giudansky.com/design/51-blender-map)
 
 [Tutorial](https://www.instructables.com/id/Beginners-Guide-to-Blender/)
