--- a/7.10.firmware.md
+++ b/7.10.firmware.md
@@ -1,31 +1,65 @@
 ## Firmware de la impresora
 
+El firmware es el software que tiene instalada la placa electrónica de la impresora y que controla todos los componentes. Una impresora sin firmware o con uno erróneo no funcionaría en absoluto.
 
-Existen diferentes programas que son considerados el firmware de la impresora dependiendo de las distintas versiones de software tendrán una funcionalidad de su otra
+La naturaleza opensource de muchas de las impresoras permite que los usarios vayan publicando versiones actualizadas de estos firmware. También a veces los fabricantes las publican, sobre todo para corregir errores..
 
-El más utilizado se conoce como marlin se encuentra actualmente en la versión número 2 y he la base de la mayoría de los firmware de la impresora
+Por ello a veces tenemos que actualizarlo, para conseguir mejoras o corrección de errores.
 
-Este firmware se tiene que encargar de hacer que la impresora vaya leyendo todos los órdenes de movimiento que están guardados en el fichero G-Code seleccionado de la tarjeta al mismo tiempo que va ordenando los distintos movimientos al motor y controlando los distintos sensores una de las partes más críticas es la parte del calentamiento del fusor que se realiza en un bucle cerrado dónde se va midiendo constantemente la temperatura de este y encendiendo cuando sea necesario la resistencia calefactora
+Hay que empezar diciendo que la impresora no funciona si no le ponemos el firmware adecuado, o no se instalamos adecuadamente, con lo cual **no deberíamos intentar cambiarlo si no estamos seguros de saber hacerlo**, puesto que podemos terminar con  una impresora inservible.
+
+El firmware está formado por diferentes programas y librerías, que son los adecuados para cada componente de la impresora.
+
+## Un ejemplo: Marlin
+
+El firware más utilizado se conoce como [**Marlin**](https://marlinfw.org/) se encuentra actualmente en la versión número 2 y es la base de la mayoría de los firmware de la impresora. Al ser opensource, muchos fabricantes lo adaptan según sus gustos y necesidades.
+
+Este firmware se tiene que encargar de:
+
+* Hacer que la impresora vaya leyendo todos los órdenes de movimiento que están guardados en el fichero G-Code seleccionado de la tarjeta 
+* Al mismo tiempo que va trasmitiendo los distintos movimientos a los motores 
+* Controlando los distintos sensores
+* Mostrando el estado en la pantalla
+* Leyendo los mandos de usuario
+* Una de las partes más críticas es la parte del calentamiento del fusor que se realiza en un bucle cerrado dónde se va midiendo constantemente la temperatura de este y encendiendo cuando sea necesario la resistencia calefactora
+* También se tiene que hacer el mismo sistema de control con la calefacción de la base pero en este caso no es tan crítico y a veces se recurre a un sistema más sencillo conocido como**BingBang** que utiliza un sencillo relé para ir encendiendo o apagando la componente calefactor de la base
+* ...
 
 
-También se tiene que hacer el mismo sistema de control con la calefacción de la base pero en este caso no es tan crítico y a veces se recurre a un sistema más sencillo conocido compi **BingBang** en el que
+Además de esta complejidad, hay que pensar que para que sea comptible con diferentes modelos de impresoras y sus distintos componentes, ha de ser capaz de controlar una gran variedad de cada uno:
 
-Se utiliza un sencillo relé para ir encendiendo o apagando la componente calefactor de la base
+* De pantallas: gráficas, de texto, táctilas, apaisadas o verticales, a color o monocromas,...
+* De los diferentes driver de motores
+* De los distintos tipos de sensores
+* De la placa base de la electríca, de su microcontrolador, versión, ...
+* Con la conexión de los distintos componentes
+* Con los tipos de ventiladores
+* ...
+
+Podemos descargar el código de Marlin de [su repositorio de github](https://github.com/MarlinFirmware/Marlin)
+
+## Configuración de Marlin
+
+Por ello, antes de instalarlo en nuestra máquina es necesario que lo configuremos:
+
+* Con los componentes concretos que usamos
+* Con los parámetros concretos de calibración, necesarios para nuestra impresora.
+
+Normalmente la configuración la haremos en el fichero **Configuration.h** del que tenemos una extensa [guía en la página de Marlin](https://marlinfw.org/docs/configuration/configuration.html#configuring-marlin)
+
+## Compilación de Marlin
+
+Una vez configurado debemos compilarlo, usando algún IDE, como el [IDE de Arduino](https://marlinfw.org/docs/basics/install_arduino.html) o [plataformIO](https://marlinfw.org/docs/basics/install_platformio.html)
 
 ## Actualización del firmware
 
-Salvo que el fabricante nos lo proporcione ... podemos coger la versión estándar de Marlin y configurar nuestra impresora
 
-EJEMPLO
-
-Ahora podemos  actualizar su firmware.
-
-CONVIENE HACER UNA COPIA DEL ANTERIOR por si acaso....
+Conviene hacer una copia del firmware actual, antes de cambiarlo por si acaso....
 
 
 Si la impresora usa una electrónica basada en Arduino podremos actualizarlo desde el IDE de Arduino con un cable USB como haríamos con cualquier placa.
 
-En las más modernas el procedimiento habitual es compilarlo y poner el fichero .bin en la tarjeta SD con un nombre concreto, al arrancar la impresora se actualizará.
+En las impresoras más modernas el procedimiento habitual es compilarlo y poner el fichero .bin resultante en la tarjeta SD con un nombre concreto, al arrancar la impresora se actualizará.
 
 En cualquier caso, es una operación arriesgada que puede innutilizar nuestra impresora y debemos hacerla siguiendo las indicaciones del fabricante
 
