--- a/7.0.Mantenimiento.md
+++ b/7.0.Mantenimiento.md
@@ -1,8 +1,8 @@
-# Matenimiento de una impresora 3D
+# Mantenimiento de una impresora 3D
 
 Si queremos que nuestra impresora 3D mantenga un buen nivel de funcionamiento, es necesario que apliquemos con cierta frecuencia acciones de mantenimiento.
 
-Si nuestro uso es el típico doméstico bastará con aplicar medidas cuando las veamos necesarias, es lo que se dice un matenimiento pasivo: se detecta el problema o la pérdida de rendimiento y se actúa.
+Si nuestro uso es el típico doméstico bastará con aplicar medidas cuando las veamos necesarias, es lo que se dice un mantenimiento pasivo: se detecta el problema o la pérdida de rendimiento y se actúa.
 
 En cambio si pensamos dar un uso profesional a nuestra impresora, debemos diseñar un plan de mantenimiento activo, es decir, anticiparnos a los problemas antes de que pasen. Es lo que se conoce como mantenimiento predictivo.
 
