--- a/7.1.limpieza.md
+++ b/7.1.limpieza.md
@@ -1,6 +1,6 @@
 # Limpieza
 
-El uso continuado de la impresora, sobre todo por el rozamiento del filamento con el extrusor y por los pequeños frgmentos que se separan de las piezas, hace necesaria una limpieza frecuente.
+El uso continuado de la impresora, sobre todo por el rozamiento del filamento con el extrusor y por los pequeños fragmentos que se separan de las piezas, hace necesaria una limpieza frecuente.
 
 Si además usamos laca o la grasa de los husillos o rodamientos hace que esta suciedad se acumule. Como vemos en las siguientes imágenes, esta suciedad se acumula en los motores:
 
@@ -10,11 +10,11 @@ También en los rodamientos y en los patines, al mezclarse el polvo con la grasa
 
 ## Limpieza de la boquilla
 
-Tras un impresión es frecuente que queden restos de filamento en el exterior de la boquilla. Podemos hacer una limpieza del exterior de la boquilla en caliente y usando un cepillo metálico pero de cerdas finas. Personalmente uso estropajo metálico doméstico de tipo "nanas"
+Tras una impresión es frecuente que queden restos de filamento en el exterior de la boquilla. Podemos hacer una limpieza del exterior de la boquilla en caliente y usando un cepillo metálico pero de cerdas finas. Personalmente uso estropajo metálico doméstico de tipo "nanas"
 
-![limpiezaBoquilla1.jpg](./images/limpiezaBoquilla1.jpg)
+![](./images/limpiezaBoquilla1.jpg)
 
-![IlimpiezaBoquilla2.jpg](./images/IlimpiezaBoquilla2.jpg)
+![Limpieza de la boquilla](./images/IlimpiezaBoquilla2.jpg)
 
 ## Limpieza del extrusor
 
@@ -31,8 +31,8 @@ La base sobre la que imprimimos es un componente fundamental para conseguir impr
 
 * Debemos mantenerla limpia para evitar que los restos de anteriores impresiones se adhieran a las nuevas piezas. 
 * Hay que tener cuidado al limpiarla para evitar ralladuras.
-* En el cristal/espejo se quedan muchos restos, sobre todo si usamos laca. Es conveniente tener un mínimo de limpieza pero no es ncesario limpiarla cada vez.
-* Un exceso laca va a dejar restos en nuestras peizas.
+* En el cristal/espejo quedan muchos restos, sobre todo si usamos laca. Es conveniente tener un mínimo de limpieza pero no es necesario limpiarla cada vez.
+* Un exceso de laca va a dejar restos en nuestras piezas.
 
 ![](./images/RestosImpresiones.jpg)
 ![](./images/RestosLaca.jpg)
@@ -40,7 +40,7 @@ La base sobre la que imprimimos es un componente fundamental para conseguir impr
 
 ## Limpieza de los ventiladores
 
-Los ventiladores son sin duda el componente donde más suciedad se acumula, debido al flujo permanente de aire que soporta. Por eso es importante limpiarlos con frecuencia, para evitar que pierdan eficacia y generen más ruído.
+Los ventiladores son sin duda el componente donde más suciedad se acumula, debido al flujo permanente de aire que soporta. Por eso es importante limpiarlos con frecuencia, para evitar que pierdan eficacia y generan más ruido.
 
 Una falta de rendimiento de los ventiladores puede dar lugar a calentamiento de la electrónica o de otros componentes.
 
