--- a/7.10.firmware.md
+++ b/7.10.firmware.md
@@ -2,11 +2,11 @@
 
 El firmware es el software que tiene instalada la placa electrónica de la impresora y que controla todos los componentes. Una impresora sin firmware o con uno erróneo no funcionaría en absoluto.
 
-La naturaleza opensource de muchas de las impresoras permite que los usarios vayan publicando versiones actualizadas de estos firmware. También a veces los fabricantes las publican, sobre todo para corregir errores..
+La naturaleza opensource de muchas de las impresoras permite que los usuarios vayan publicando versiones actualizadas de estos firmware. También a veces los fabricantes las publican, sobre todo para corregir errores..
 
 Por ello a veces tenemos que actualizarlo, para conseguir mejoras o corrección de errores.
 
-Hay que empezar diciendo que la impresora no funciona si no le ponemos el firmware adecuado, o no se instalamos adecuadamente, con lo cual **no deberíamos intentar cambiarlo si no estamos seguros de saber hacerlo**, puesto que podemos terminar con  una impresora inservible.
+Hay que empezar diciendo que la impresora no funciona si no le ponemos el firmware adecuado, o no se lo instalamos adecuadamente, con lo cual **no deberíamos intentar cambiarlo si no estamos seguros de saber hacerlo**, puesto que podemos terminar con  una impresora inservible.
 
 El firmware está formado por diferentes programas y librerías, que son los adecuados para cada componente de la impresora.
 
@@ -26,12 +26,12 @@ Este firmware se tiene que encargar de:
 * ...
 
 
-Además de esta complejidad, hay que pensar que para que sea comptible con diferentes modelos de impresoras y sus distintos componentes, ha de ser capaz de controlar una gran variedad de cada uno:
+Además de esta complejidad, hay que pensar que para que sea compatible con diferentes modelos de impresoras y sus distintos componentes, ha de ser capaz de controlar una gran variedad de cada uno:
 
-* De pantallas: gráficas, de texto, táctilas, apaisadas o verticales, a color o monocromas,...
+* De pantallas: gráficas, de texto, táctiles, apaisadas o verticales, a color o monocromas,...
 * De los diferentes driver de motores
 * De los distintos tipos de sensores
-* De la placa base de la electríca, de su microcontrolador, versión, ...
+* De la placa base de la electrónica, de su microcontrolador, versión, ...
 * Con la conexión de los distintos componentes
 * Con los tipos de ventiladores
 * ...
@@ -61,5 +61,5 @@ Si la impresora usa una electrónica basada en Arduino podremos actualizarlo des
 
 En las impresoras más modernas el procedimiento habitual es compilarlo y poner el fichero .bin resultante en la tarjeta SD con un nombre concreto, al arrancar la impresora se actualizará.
 
-En cualquier caso, es una operación arriesgada que puede innutilizar nuestra impresora y debemos hacerla siguiendo las indicaciones del fabricante
+En cualquier caso, es una operación arriesgada que puede inutilizar nuestra impresora y debemos hacerla siguiendo las indicaciones del fabricante
 
