--- a/7.5.0.ControlRemotoImpresora.md
+++ b/7.5.0.ControlRemotoImpresora.md
@@ -2,7 +2,7 @@
 
 A medida que vamos imprimiendo más piezas nos damos cuenta de que es cómodo tener un control o al menos una supervisión remota de la impresora.
 
-En cualquier caso hay que insistir en que no es conveniente dejar sin supervisión cercana la impresora mientras imprime, dado que no suelen ser máquinas profesionales con total garantía de seguridad. Un cortocircuito puede provocar un calentamiento de alguna parte de plástico y se produciendo un incendio con facilidad.
+En cualquier caso, hay que insistir en que no es conveniente dejar sin supervisión cercana la impresora mientras imprime, dado que no suelen ser máquinas profesionales con total garantía de seguridad. Un cortocircuito puede provocar un calentamiento de alguna parte de plástico y produciendose un incendio con facilidad.
 
 ## Cámaras remotas
 
