--- a/7.5.1.Octoprint.md
+++ b/7.5.1.Octoprint.md
@@ -2,11 +2,11 @@
 
 ![Octoprint](./images/logo_octoprint.png)
 
-[Octoprint](https://octoprint.org/) es un software de control remoto y gestión de impresoras 3D. Podemos acceder al mismo vía Web, tras instalarlo en un equipo. Es OpenSource, creado por [Gina Häußge](https://www.linkedin.com/in/ginahaeussge) y a día de hoy va por la versión 1.6 con un ritmo de actualización y mantenimiento excelente. Es muy utilizado, tanto por usuarios particular como por empresas. 
+[Octoprint](https://octoprint.org/) es un software de control remoto y gestión de impresoras 3D. Podemos acceder al mismo vía Web, tras instalarlo en un equipo. Es OpenSource, creado por [Gina Häußge](https://www.linkedin.com/in/ginahaeussge) y a día de hoy va por la versión 1.6 con un ritmo de actualización y mantenimiento excelente. Es muy utilizado, tanto por usuarios particulares como por empresas. 
 
 De hecho Prusa Research tiene una versión propia de octoprint (PrusaPrint) preparado para sus impresoras que se conecta directamente a la placa de la impresora.
 
-Con Octoprint podemos enviar directamente a la impresora las tareas de impresión, encendiéndo o apagándola cuando sea necesario. En todo momento podemos ver el estado y si tenemos cámara podremos ver la impresora en funcionamiento.
+Con Octoprint podemos enviar directamente a la impresora las tareas de impresión, encendiéndola o apagándola cuando sea necesario. En todo momento podemos ver el estado y si tenemos cámara podremos ver la impresora en funcionamiento.
 
 [![Vídeo: 7.5.1 Controla remotamente tu impresora 3D con Octoprint](https://img.youtube.com/vi/kLuuMpX4i9w/0.jpg)](https://drive.google.com/file/d/1eOzrLx6OO-g5A0Qr4-20FlsI6U4BntKe/view?usp=sharing)
 
@@ -15,7 +15,7 @@ Con Octoprint podemos enviar directamente a la impresora las tareas de impresió
 
 Podemos utilizar cualquier ordenador, pero en mi caso usaré una Raspberry:
 
-![Raspberry_Pi_3_Model_B](./images/Raspberry_Pi_3_Model_B.png)
+![Raspberry Pi 3B](./images/Raspberry_Pi_3_Model_B.png)
 
 
 [![Vídeo: 7.5.2 Instalación de Octoprint](https://img.youtube.com/vi/5QqRwdIRhK8/0.jpg)](https://drive.google.com/file/d/1cDrPsKW89hJVOzRsAyKaIQNjr-PQkUWg/view?usp=sharing)
@@ -28,9 +28,9 @@ Desde la [página de descargas de octoprint](https://octoprint.org/download/) po
 
 También hay instrucciones para la [instalación en Windows](https://community.octoprint.org/t/setting-up-octoprint-on-windows/383/1) o [en Mac](https://community.octoprint.org/t/setting-up-octoprint-on-macos/13425)
 
-Octoprint no incorpora un interface grádico, sino que está pensado para que lo controlemos remotamente vía web. Por ello antes de arrancarlo vamos a configurar el acceso a red. Podemos usar Wifi o un cable ethernet. En mi caso voy a usar wifi. 
+Octoprint no incorpora un interface gráfico, sino que está pensado para que lo controlemos remotamente vía web. Por ello antes de arrancarlo vamos a configurar el acceso a red. Podemos usar Wifi o un cable ethernet. En mi caso voy a usar wifi. 
 
-Para configurarlo, antes de colocarla en la Raspberry accedemos a la tarjeta SD y editaremos el fichero "/boot/octopi-wpa-supplicant.txt" donde descomentaremos y rellenaremos los datos de acceso a nuestro wifi
+Para configurarlo, antes de colocarla en la Raspberry accedemos a la tarjeta SD y editaremos el fichero "/boot/octopi-wpa-supplicant.txt" donde descomentamos y rellenaremos los datos de acceso a nuestro wifi
 
 ```sh
 # WPA/WPA2 secured
@@ -43,7 +43,7 @@ network={
 
 Ahora al arrancar se conectará y nos mostrará en pantalla la ip
 
-![Aranque de optoprint](./images/octopi_boot.jpg)
+![Arranque de optoprint](./images/octopi_boot.jpg)
 
 También podemos acceder desde el nombre [http://octopi.local](http://octopi.local)
 
@@ -67,7 +67,7 @@ También podemos acceder desde el nombre [http://octopi.local](http://octopi.loc
   * En la pestaña de "Axes" configuramos las velocidades, que dejaremos por defecto
   * En la pestaña "Hotend & extruder" configuramos el nº de extrusores y el tamaño de la boquilla.
 * Por último nos muestra las recomendaciones de uso: 
-  * Por seguridad no deberíaos dejar desatendida nuestra impresora mientras imprime.
+  * Por seguridad no deberías dejar desatendida nuestra impresora mientras imprime.
   * No debemos dejar accesible el servidor desde internet.
 
 Si nos gusta el Octoprint y lo encontramos práctico podemos [donar al proyecto](https://octoprint.org/support-octoprint/)
@@ -110,12 +110,12 @@ En la parte central vemos que aparecen varias pestañas:
 Y si la impresora está conectada y encendida veremos controles para mover el extrusor en los distintos ejes y activar o apagar el ventilador
 ![](./images/OCT_control_movimientos.png)
 
-* Pestaña GCode viewer: nos permite ver la capa que se está impriendo en cada momento:
+* Pestaña GCode viewer: nos permite ver la capa que se está imprimiendo en cada momento:
 ![](./images/oct_GCodeViewer.png)
-O movermos por las distintas capasa
+O movernos por las distintas capas
 ![](./images/oct_GCodeViewer2.png)
 
-* Pestaña de terminal: desde donde podemos ver la comuniciación entre la impresora y Octoprint en tiempo real
+* Pestaña de terminal: desde donde podemos ver la comunicación entre la impresora y Octoprint en tiempo real
 ![](./images/oct_terminal.png)
 Podemos filtrar algunos mensajes repetitivos, como por ejemplo los de las temperaturas.
 
@@ -230,7 +230,7 @@ Se trata de un plugin que nos ofrece un configuracón más detallada de la cáma
 
 ### Optolapse
 
-Este plugin nos proporción muchas opciones diferentes para hacer los timelapse, pudiendo decidir por ejemplo si el extrusor debe ir a alguna posición concreta a la hora de tomar la imagen instantánea:
+Este plugin nos proporciona muchas opciones diferentes para hacer los timelapse, pudiendo decidir por ejemplo si el extrusor debe ir a alguna posición concreta a la hora de tomar la imagen instantánea:
 ![](./images/Oct_octolapse.png)
 Tiene una detallada configuración:
 ![](./images/Oct_octolapse_settings.png)
