--- a/8.2.Atascos.md
+++ b/8.2.Atascos.md
@@ -12,7 +12,7 @@ Ya hemos visto al hablar de la estructura del extrusor que es muy importante que
 
 Los atascos se pueden producir en distintas zonas:
 
-* Pueden ocurrir en la parte superior,  más fría,  del extrusor, Normalmente por rotura del filamento al extraerlo .
+* Pueden ocurrir en la parte superior,  más fría,  del extrusor, normalmente por rotura del filamento al extraerlo .
 
 * Pueden ocurrir en la barrera térmica, habitualmente al cambiar el filamento se queda algún fragmento fundido en esa parte un poco más fría.
 
@@ -60,7 +60,7 @@ Para resolver  el atasco, tenemos que conseguir retirar el fragmento de filament
 
 * Para conseguir el calentamiento de la partícula de filamento, si esta se encuentra en la parte más fría del extrusor podemos recurrir a parar el ventilador durante un corto tiempo para que así se caliente un poco más la parte que normalmente está fría y el filamento se mueva con mayor facilidad.
 
-* Si la atasco se ha producido en la boquilla,es el más sencillo de resolver, el calentamiento normal del extrusor y un poco de presión con el filamento suelen bastar. También podemos calentando calentar un poco por encima de la temperatura habitual del filamento que estamos utilizando conseguir que se produzca una limpieza. 
+* Si el atasco se ha producido en la boquilla,es más sencillo de resolver, el calentamiento normal del extrusor y un poco de presión con el filamento suelen bastar. También podemos calentando calentar un poco por encima de la temperatura habitual del filamento que estamos utilizando para conseguir que se produzca la limpieza. 
 
 * En algunos casos puede ocurrir que a pesar de la limpieza se deteriore el material interno del extrusor y tengamos que recurrir a cambiarlo o bien la boquilla o bien lo que es el tubo PTFE que incluye alguno extrusores
 
