--- a/PublicacionBase/7.Objetivos.md
+++ b/PublicacionBase/7.Objetivos.md
@@ -2,4 +2,5 @@
 
 ## Objetivos
 
-* Uso y mantenimiento de un impresora 3D
+* Conocer las principales tareas mantenimiento de una impresora 3D
+* Controlar remotamente la impresora con Octoprint
