--- a/8.3.erroresFrecuentes.md
+++ b/8.3.erroresFrecuentes.md
@@ -1,8 +1,9 @@
 ## Errores frecuentes
 
 Cambiar en la configuración del laminador el grosor del filamento que estamos usando:
+
 * Si nuestra impresora usa filamento de 2.85/3mm y ponemos en la configuración 1.75mm, el resultado será una figura esponjosa, por falta de filamento
-* Si lo hacemos alrevés al tener exceso de filamento veremos que la impresión es tosca, mezclándose unas partes con otras.
+* Si lo hacemos al revés, al tener exceso de filamento veremos que la impresión es tosca, mezclándose unas partes con otras.
 
 Las impresoras están preparadas para usar sólo un grosor de filamento y si intentamos usar otro se producen este tipo de cosas...
 
@@ -15,3 +16,4 @@ Ahora hay que extraer ese filamento arrugado del extrusor y del fusor, lo cuál 
 El diámetro del filamento es una característica esencial del extrusor y para utilizar uno distinto tenemos que adaptarlo.
 
 Sí que existen adaptadores pero eso no es tan sencillo como poner un tubito.
+
