--- a/PublicacionBase/6.Ejercicio.md
+++ b/PublicacionBase/6.Ejercicio.md
@@ -2,7 +2,7 @@
 
 ## Ejercicio
 
-Tras imprimir alguna pieza analiza la calidad obtenida y a la luz de lo aprendido en el tema, propón mejorar para obtener un mejor resultado.
+Tras imprimir alguna pieza analiza la calidad obtenida y a la luz de lo aprendido en el tema, propón mejoras para obtener un mejor resultado.
 
 Escribe tu explicación en un documento aparte y envíalo al profesor
 
