--- a/8.0.0.FallosImpresion.md
+++ b/8.0.0.FallosImpresion.md
@@ -51,7 +51,7 @@ Para resolverlo aumentaremos la **longitud de y la velocidad de retracción** po
 
 ## Sonido de golpeteo en el extrusor
 
-Si mientras se está imprimiendo hoy más unos golpes rítmicos en el extrusor, suelen producirse al saltar los dientes del engranaje del extrusor sobre el filamento, quizás por no puede fluir el pástico:
+Si mientras se está imprimiendo hoy más unos golpes rítmicos en el extrusor, suelen producirse al saltar los dientes del engranaje del extrusor sobre el filamento, quizás por no puede fluir el plástico:
 
 * Quizás estamos imprimiendo demasiado cerca de la base o 
 * Temperatura del filamento demasiado baja
@@ -66,9 +66,9 @@ Si al imprimir no encontramos que a partir de una capa, la pieza aparece desplaz
 * Comprobaremos si hay suficiente tensión en la correa de ese eje.
 * Revisaremos si la electrónica o el motor se sobrecaliente
 
-[![Vídeo: Fallos de impresión 3D](https://img.youtube.com/vi/HSEIMJzSUuA/0.jpg)](https://youtu.be/HSEIMJzSUuA)
+[![Vídeo: Fallos de impresión 3D](https://img.youtube.com/vi/HSEIMJzSUuA/0.jpg)](https://drive.google.com/file/d/10DHcU27ALxLPxkPl0gK4ewX6x8hTO4gP/view?usp=sharing)
 
-[Vídeo: Fallos de impresión 3D](https://youtu.be/HSEIMJzSUuA)
+[Vídeo: Fallos de impresión 3D](https://drive.google.com/file/d/10DHcU27ALxLPxkPl0gK4ewX6x8hTO4gP/view?usp=sharing)
 
 
 
