--- a/PublicacionBase/8.Objetivos.md
+++ b/PublicacionBase/8.Objetivos.md
@@ -3,4 +3,4 @@
 ## Objetivos
 
 * Detectar los problemas más frecuentes
-* Aprender a resovler estos problemas
+* Aprender a resolver estos problemas
