--- a/7.5.2.Octoprint_avanzado_v2.md
+++ b/7.5.2.Octoprint_avanzado_v2.md
@@ -1,4 +1,16 @@
-Instalación manual https://octoprint.org/download/ 
+## Octodash
+
+UI para Raspberry
+
+![](https://i.all3dp.com/cdn-cgi/image/fit=cover,w=1000,gravity=0.5x0.5,format=auto/wp-content/uploads/2021/06/16093813/the-main-octodash-screen-is-clear-and-easy-to-unde-jerry-ward-via-all3dp-210613_download.jpg)
+
+https://all3dp.com/2/octodash-simply-explained/
+
+
+
+## Instalación manual 
+
+https://octoprint.org/download/ 
 
 * pip and virtualenv. 
 * Creating a virtual environment somewhere: virtualenv OctoPrint
@@ -8,12 +20,13 @@ Instalación manual https://octoprint.org/download/
 https://community.octoprint.org/t/setting-up-octoprint-on-a-raspberry-pi-running-raspbian-or-raspberry-pi-os/2337
 
 
-Versión para Prusa
+## Versión para Prusa
 
 https://help.prusa3d.com/en/article/prusaprint-rpi-zero-and-octoprint_2180/#connecting-the-rpi-zero-to-your-printer
 
 https://help.prusa3d.com/en/article/octoprint-configuration-and-install_2182
 
+## Recursos
 
 https://all3dp.com/2/octoprint-raspberry-pi-4-tutorial/
 
