--- a/9.3.Freecad.md
+++ b/9.3.Freecad.md
@@ -42,3 +42,12 @@
 * Tableta de chocolate
 
 ![4](http://www.iearobotics.com/wiki/images/thumb/9/9f/T12-ej2-chocolate-3.png/800px-T12-ej2-chocolate-3.png)
+
+
+### [FreeCad](http://www.freecadweb.org/)
+
+![Diseño con Freecad](./images/FreeCAD_aeroponic_system.jpg) 
+
+[Curso de Freecad](http://www.iearobotics.com/wiki/index.php?title=Dise%C3%B1o_de_piezas_con_Freecad) 
+
+
