--- a/9.0.HerramientasDiseño3D.md
+++ b/9.0.HerramientasDiseño3D.md
@@ -23,63 +23,34 @@ En el diseño paramétrico o CAD cómo se suele denominar, se trabaja con herram
 
 También podemos ver distintos tipos de herramientas según el fin de las piezas o diseños. 
 
-
 Para ello existen algunas herramientas con un fin claramente **industrial**, en el que no solamente queremos generar una pieza nueva, si no queremos trabajar el movimiento de ellas, el funcionamiento, cómo se conectan y en definitiva la creación de una máquina mucho más compleja. En este caso diríamos que están utilizando herramientas de diseño industrial. Un ejemplo de diseño industrial:
 
-![cad](./images/FourCylinderEngine.gif)
+![](./images/FourCylinderEngine.gif)
 
-También existen otro tipo de herramienta en las que es lo que estamos creando es un algoritmo o programa cuyo fin es el general una pieza 3D paramos pensar por ejemplo en un engranaje en el que podemos programar cada uno de los dientes que lo forman o bien una pieza compleja a la que se llega añadiendo otras piezas más pequeñas.
+También existen otro tipo de herramientas en las que creamos un algoritmo o programa que genera una pieza 3D. Podemos pensar, por ejemplo, en un engranaje, en el que podemos programar cada uno de los dientes que lo forman o bien una pieza compleja a la que se llega añadiendo otras piezas más pequeñas. Hablamos de **Diseño algorítmico**.
 
-### [FreeCad](http://www.freecadweb.org/)
-
-![freecad](./images/FreeCAD_aeroponic_system.jpg) 
-
-[Curso de Freecad](http://www.iearobotics.com/wiki/index.php?title=Dise%C3%B1o_de_piezas_con_Freecad) 
-
-
-### [OnShape](https://www.onshape.com/en/products/free)
-
-![OnShape](./images/onshape.jpg)
-
-
-[Documentación](https://www.onshape.com/en/resource-center/) [Tutorial de bitfab](https://bitfab.io/es/blog/onshape/)
-
-### [Autodesk Fusion 360](https://www.autodesk.es/products/fusion-360/overview?term=1-YEAR) 
-
-[breve tutorial](https://bitfab.io/es/blog/fusion-360-impresion-3d/)
-
-![](./images/assembly-1-768x432.jpg)
-
-### Herramientas orientadas a diseño de interiores, arquitectura o decoración
-
-Existe software de diseño pensado para trabajar en decoración o en arquitectura:
-
-![](./images/homebyme.png)
-
-[home.by.me](https://home.by.me/es/)
-
-[floorplanner](https://es.floorplanner.com/)
-
-[sweethome3d](http://www.sweethome3d.com/es/)
-
-[SketchUp](https://my.sketchup.com/app)
-
-![SketchUp](./images/sketchup-dimensions.jpg)
-
-
-## Diseño paramétrico
-
-[Tinkercad](http://Tinkercad.com)
-
-![Tinkercad](./images/Tinkercad.jpg)
-
-## Diseño algorítmico
-
-[OpenSCad](http://www.openscad.org/) ([Tutoriales](http://www.iearobotics.com/wiki/index.php?title=Obijuan_Academy#Tutoriales_Openscad))
+* [OpenSCad](http://www.openscad.org/) ([Tutoriales](http://www.iearobotics.com/wiki/index.php?title=Obijuan_Academy#Tutoriales_Openscad)) nos permite programar los diseños con código.
 
 ![OpenSCad](./images/openscad-screen-gear.jpg)
 
-[BlockScad](https://blockscad.com)
+* [BlockScad](https://blockscad.com) donde usamos bloques para programar el diseño.
 
-[Tinkercad - bloques](http://Tinkercad.com)
+* [Tinkercad](http://Tinkercad.com) también dispone de un módulo para programar diseños usando bloques.
 
+### Arquitectura y diseño de interiores 
+
+Existe software de diseño pensado para trabajar en decoración o en arquitectura, el objetivo es crear diseños de planos e interiores con un acabado fotorealistas.
+
+La mayoría de ellos permiten incorporar mobiliario prediseñado, incluso de marcas (como Ikea)
+
+![](./images/homebyme.png)
+
+[Home by me](https://home.by.me/es/)
+
+[Floor planner](https://es.floorplanner.com/)
+
+[Sweet home 3d](http://www.sweethome3d.com/es/)
+
+[SketchUp](https://my.sketchup.com/app) es un software muy pontente utilizado, entre otras cosas, para diseñar las vistas fotorealistas de Google Map y Google Earth. 
+
+![SketchUp](./images/sketchup-dimensions.jpg)
