--- a/9.2.0.Tinkercad.md
+++ b/9.2.0.Tinkercad.md
@@ -8,15 +8,15 @@ Tinkercad es una herramienta online gratuita para comenzar a diseñar en 3D. Aun
 
 Utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta generar nuestro diseño.
 
-[![Vídeo: 0. Introducción al diseño 3D con  Tinkercad](https://img.youtube.com/vi/P1mPtGoYHq4/0.jpg)](https://youtu.be/P1mPtGoYHq4)
+[![Vídeo: 0. Introducción al diseño 3D con  Tinkercad](https://img.youtube.com/vi/P1mPtGoYHq4/0.jpg)](https://drive.google.com/file/d/1CAok4UF-qGb3JR4TMXlm3pS_s-qQC04e/view?usp=sharing)
 
-[Vídeo: 0. Introducción al diseño 3D con  Tinkercad](https://youtu.be/P1mPtGoYHq4)
+[Vídeo: 0. Introducción al diseño 3D con  Tinkercad](https://drive.google.com/file/d/1CAok4UF-qGb3JR4TMXlm3pS_s-qQC04e/view?usp=sharing)
 
 * Necesita crearse una cuenta: Podemos crearla con nuestro email o usar la autentificación de Google o de Facebook
 
-[![Vídeo: 1. Creación de un cuenta en Tinkercad](https://img.youtube.com/vi/RLo6XVDkulg/0.jpg)](https://youtu.be/RLo6XVDkulg)
+[![Vídeo: 1. Creación de un cuenta en Tinkercad](https://img.youtube.com/vi/RLo6XVDkulg/0.jpg)](https://drive.google.com/file/d/1oafxrB9_Afyq467kIS-et7ghOzUb0Zrb/view?usp=sharing)
 
-[Vídeo: 1. Creación de un cuenta en Tinkercad](https://youtu.be/RLo6XVDkulg)
+[Vídeo: 1. Creación de un cuenta en Tinkercad](https://drive.google.com/file/d/1oafxrB9_Afyq467kIS-et7ghOzUb0Zrb/view?usp=sharing)
 
 * Al entrar encontramos tutoriales sencillos con los que empezar a aprender.
 
@@ -25,9 +25,9 @@ Utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta 
 
   * Creación de piezas y movimiento del punto de vista
 
-  [![Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://img.youtube.com/vi/MdqyZvXOxDU/0.jpg)](https://youtu.be/MdqyZvXOxDU)
+  [![Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://img.youtube.com/vi/MdqyZvXOxDU/0.jpg)](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
   
-  [Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://youtu.be/MdqyZvXOxDU)
+  [Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
 
   * Plano de trabajo
     * Podemos cambiar el plano de trabajo y así todo lo que hagamos se referirá al nuevo
@@ -66,24 +66,51 @@ Utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta 
 * L Opens the align tool
 * M Takes you to the mirror tool
 
-[![Video: 3. Uso de paletas de primitivas](https://img.youtube.com/vi/Xv_ZSyiRaY8/0.jpg)](https://youtu.be/Xv_ZSyiRaY8)
+[![Video: 3. Uso de paletas de primitivas](https://img.youtube.com/vi/Xv_ZSyiRaY8/0.jpg)](https://drive.google.com/file/d/16HLUdWgSOmbnK2T5we5QDWT_EFRt1v0-/view?usp=sharing)
 
-[![Video: 4. Propiedades de un diseño](https://img.youtube.com/vi/-uj2iGIRV38/0.jpg)](https://youtu.be/-uj2iGIRV38)
+[![Video: 4. Propiedades de un diseño](https://img.youtube.com/vi/-uj2iGIRV38/0.jpg)](https://drive.google.com/file/d/1cBk0I7zdudxTM0j3HgJKdoz-nK02bocn/view?usp=sharing)
 
-[![Video: 5 Giros y rotaciones](https://img.youtube.com/vi/pb2iHcSGiQU/0.jpg)](https://youtu.be/pb2iHcSGiQU)
+[![Video: 5 Giros y rotaciones](https://img.youtube.com/vi/pb2iHcSGiQU/0.jpg)](https://drive.google.com/file/d/1Z1YQ0bZRSdEIl9aSInAokpPQ0HU6A36a/view?usp=sharing)
 
-[![Video: 6. Ejemplo: una casita](https://img.youtube.com/vi/hAMeqIeFUXE/0.jpg)](https://youtu.be/hAMeqIeFUXE)
+[![Video: 6. Ejemplo: una casita](https://img.youtube.com/vi/hAMeqIeFUXE/0.jpg)](https://drive.google.com/file/d/1_eg8brz1fdx0EWn70wXMl7xLcq2DXGzD/view?usp=sharing)
 
-[![Video: 7. Agrupar y desagrupar elementos](https://img.youtube.com/vi/BQqTM9iM89U/0.jpg)](https://youtu.be/BQqTM9iM89U)
+[![Video: 7. Agrupar y desagrupar elementos](https://img.youtube.com/vi/BQqTM9iM89U/0.jpg)](https://drive.google.com/file/d/1tQCUuhg-krdwzpap2_xn_qtJgFC4c7fi/view?usp=sharing)
 
-[![Video: 8. Copiar y pegar objetos](https://img.youtube.com/vi/KN5zTTwtLZQ/0.jpg)](https://youtu.be/KN5zTTwtLZQ)
+[![Video: 8. Copiar y pegar objetos](https://img.youtube.com/vi/KN5zTTwtLZQ/0.jpg)](https://drive.google.com/file/d/1yQ3EsfXe2o7lxrtGO4tjAE4825x1BhGm/view?usp=sharing)
 
-[![Video: 10. Alineamiento entre distintos componentes](https://img.youtube.com/vi/vStwTeyoQrs/0.jpg)](https://youtu.be/vStwTeyoQrs)
+[![Video: 10. Alineamiento entre distintos componentes](https://img.youtube.com/vi/vStwTeyoQrs/0.jpg)](https://drive.google.com/file/d/1lBoD6ih0AnDRIEmQk64PCrGwjUPkSQkf/view?usp=sharing)
 
-[![Video: 11. Trabajando con huecos](https://img.youtube.com/vi/vXhMgF0qSNw/0.jpg)](https://youtu.be/vXhMgF0qSNw)
+## Trabajando con huecos
 
-[![Video: 13-14. Importar diseños en Tinkercad](https://img.youtube.com/vi/VW8qxS0n1Tg/0.jpg)](https://youtu.be/VW8qxS0n1Tg)
 
-[![Video: 15. Importacion de diseño 2D y generacion 3D](https://img.youtube.com/vi/Gza1Cd8K508/0.jpg)](https://youtu.be/Gza1Cd8K508)
 
-[![Video: 16. Diseño de un clon de Among Us](https://img.youtube.com/vi/1BXxVjlM5y0/0.jpg)](https://youtu.be/1BXxVjlM5y0)
+[![Video: 11. Trabajando con huecos](https://img.youtube.com/vi/vXhMgF0qSNw/0.jpg)](https://drive.google.com/file/d/1UrR2SUDeJQ8VyW2t3psS7Cbq6P8ka5xo/view?usp=sharing)
+
+## Importación de diseños
+
+Podemos importar diseños en los típicos formatos que usamos para impresión 3D, como STL o OBJ
+
+
+[![Video:  12 importar diseños 3D](https://img.youtube.com/vi/1fIqzxa-wDk/0.jpg)](https://drive.google.com/file/d/1BCsiSAVEP_7GIhR3HvwxCJzEd-5E3V9R/view?usp=sharing)
+
+
+[![Video: 13-14. Importar diseños de Tinkercad en nuestros diseños](https://img.youtube.com/vi/VW8qxS0n1Tg/0.jpg)](https://drive.google.com/file/d/1CCF0-jN_-DKovmkd5e_KuzjRyGSCxb-D/view?usp=sharing)
+
+## Convertir un diseño 2D a 3D
+
+Por ejemplo, importar un logo y darle aspecto 3D e incluirlo en nuestro diseño
+
+* Elegimos la imagen, mejor si es un formato que permita fondo transparente, como PNG o SVG. 
+* Si es SVG (formato vectorial) podemos escalarla sin pérdida de calidad.
+* Si no es SVG podemos convertirlo a svg con [este conversor online](https://image.online-convert.com/) o con herramientas de escritorio como InkScape
+
+Cuando ya tenemos la imagen
+
+* Abrimos nuestro modelo en Tinkercad
+* Importamos la imagen, seleccionando la altura y el tamaño.
+
+[![Video: 15. Importacion de diseño 2D y generacion 3D](https://img.youtube.com/vi/Gza1Cd8K508/0.jpg)](https://drive.google.com/file/d/1lJ-ubht1ZeSKClBxQxywcur88ECGr5zf/view?usp=sharing)
+
+### Ejemplo completo: Diseñando un clon del personaje de Among Us
+
+[![Video: 16. Diseño de un clon de Among Us](https://img.youtube.com/vi/1BXxVjlM5y0/0.jpg)](https://drive.google.com/file/d/1oEkljypXH0uvzGGhi8uXANygH72-USHR/view?usp=sharing)
