--- a/9.0.HerramientasDiseño3D.md
+++ b/9.0.HerramientasDiseño3D.md
@@ -17,9 +17,11 @@ Un ejemplo podría ser [Sculpt3D](https://stephaneginier.com/sculptgl/)
 
 ![](./images/ScultGL.png)
 
-Entre los software orientados a diseño orgánico está [Blender](https://www.blender.org/).
+Entre los software orientados a diseño orgánico está [Blender](https://www.blender.org/), un software opensource de calidad 100% profesional usado en para crear efectos en películas.
 
-En el diseño paramétrico o CAD cómo se suele denominar, se trabaja con herramientas mucho más geométricas, en el sentido en que añadimos una serie de bloques **primitivos**, que ya están configurados y creados y que nos permiten, al unirlos entre sí, ir generando piezas cada vez más complejas. A estas mismas piezas con posterioridad se le aplican determinadas transformaciones que permiten crear el diseño definitivo.
+![Diseño de personaje en Blender](./images/Character_Sintel-model-sheet.png)
+
+En el diseño paramétrico o CAD, cómo se suele denominar, se trabaja con herramientas mucho más geométricas, en el sentido en que añadimos una serie de bloques **primitivos**, que ya están configurados y creados y que nos permiten, al unirlos entre sí, ir generando piezas cada vez más complejas. A estas mismas piezas con posterioridad se le aplican determinadas transformaciones que permiten crear el diseño definitivo.
 
 También podemos ver distintos tipos de herramientas según el fin de las piezas o diseños. 
 
@@ -29,7 +31,7 @@ Para ello existen algunas herramientas con un fin claramente **industrial**, en 
 
 También existen otro tipo de herramientas en las que creamos un algoritmo o programa que genera una pieza 3D. Podemos pensar, por ejemplo, en un engranaje, en el que podemos programar cada uno de los dientes que lo forman o bien una pieza compleja a la que se llega añadiendo otras piezas más pequeñas. Hablamos de **Diseño algorítmico**.
 
-* [OpenSCad](http://www.openscad.org/) ([Tutoriales](http://www.iearobotics.com/wiki/index.php?title=Obijuan_Academy#Tutoriales_Openscad)) nos permite programar los diseños con código.
+* [OpenSCad](http://www.openscad.org/) nos permite programar los diseños con código.
 
 ![OpenSCad](./images/openscad-screen-gear.jpg)
 
@@ -45,12 +47,14 @@ La mayoría de ellos permiten incorporar mobiliario prediseñado, incluso de mar
 
 ![](./images/homebyme.png)
 
-[Home by me](https://home.by.me/es/)
+Algunos de estos programas que incluyen una versión de prueba:
 
-[Floor planner](https://es.floorplanner.com/)
+* [Home by me](https://home.by.me/es/)
 
-[Sweet home 3d](http://www.sweethome3d.com/es/)
+* [Floor planner](https://es.floorplanner.com/)
 
-[SketchUp](https://my.sketchup.com/app) es un software muy pontente utilizado, entre otras cosas, para diseñar las vistas fotorealistas de Google Map y Google Earth. 
+* [Sweet home 3d](http://www.sweethome3d.com/es/)
+
+* [SketchUp](https://my.sketchup.com/app) es un software muy pontente utilizado, entre otras cosas, para diseñar las vistas fotorealistas de Google Map y Google Earth. 
 
 ![SketchUp](./images/sketchup-dimensions.jpg)
