--- a/9.3.Freecad.md
+++ b/9.3.Freecad.md
@@ -1,6 +1,7 @@
 # FreeCad.md
 
-[FreeCad](http://www.freecadweb.org/)
+[FreeCad](http://www.freecadweb.org/) es una herramienta opensource de diseño semiprofesional orientada a la creación de diseños mecánicos e industriales. No llega a tener la funcionalidad de los software profesionales, pero cada vez es más potente.
+
 ![freecad](http://jeromeabel.net/files/ressources/democratie-industrielle/bonus-images/fab/FreeCAD_aeroponic_system.jpg)
 
 * Diferentes Vistas
@@ -18,13 +19,10 @@
 * Achaflanados, redondeados, ...
 
 
-[Tutorial rápido](http://spainlabs.com/wiki/index.php?title=Tutorial_r%C3%A1pido_de_FreeCad)
 
 [Videotutoriales (40)](http://www.iearobotics.com/wiki/index.php?title=Dise%C3%B1o_de_piezas_con_Freecad)
 
-[Manual de FreeCad](https://www.gitbook.com/book/yorikvanhavre/a-freecad-manual/details)
-
-# Tareas
+# Ejemplos sencillos
 
 * Creación de una escalera de cubos
 
@@ -42,12 +40,4 @@
 * Tableta de chocolate
 
 ![4](http://www.iearobotics.com/wiki/images/thumb/9/9f/T12-ej2-chocolate-3.png/800px-T12-ej2-chocolate-3.png)
-
-
-### [FreeCad](http://www.freecadweb.org/)
-
-![Diseño con Freecad](./images/FreeCAD_aeroponic_system.jpg) 
-
-[Curso de Freecad](http://www.iearobotics.com/wiki/index.php?title=Dise%C3%B1o_de_piezas_con_Freecad) 
-
 
