--- a/9.4.Blender.md
+++ b/9.4.Blender.md
@@ -1,10 +1,18 @@
 # Blender
 
-La última versión es la 2.79
+Blender es un software profesional de diseño orgánico muy usado en la industria del 3D.
 
 ![blender](https://www.blender.org/wp-content/uploads/2016/09/blender_278_splash_hires.jpg)
 
-[Descarga](https://www.blender.org/download/)
+La instalación es muy sencilla, pudiendo descargar desde su [página de descarga](https://www.blender.org/download/)
+
+Es un software bastante complejo de usar y muy potente con lo que para hacer algo sencillo vas a necesitar ver algunos tutoriales. 
+
+Está pensado para usar teclado y ratón, por lo que la mayoría de las opciones se activan pulsando la tecla adecuada
+
+![](./images/blender-infographic-1280-SM.png)
+
+Algunos detalles:
 
 ## Antes de abrirlo:.... Tranquilidad...
 
@@ -20,10 +28,12 @@ Para cambiar el idioma:
     * Using international Fonts
       * Marcamos las opciones que queramos
 
-Cuidado, porque los Tutoriales no se corresponderán
+Cuidado, porque los Tutoriales puede que no se correspondan con tu versión...
 
 
 ## La escena
+
+Está formada por:
 
 * Iluminación
 * Cámara
@@ -142,13 +152,9 @@ Cuando se añade un objeto tenemos opciones (número de segmentos, etc...)
 Se añade donde esté el cursor 3D
 
 
-## Ejemplo anillo
 
 
-## Ejemplo zapatilla
-
-
-## Usar imágenes de fondo como gu
+## Usar imágenes de fondo como guía
 
 Pulsamos N para ver propiedades y en Imágenes de fondo marcamos cada una de las imágenes para una vista determinada
 
@@ -160,30 +166,6 @@ Pulsamos N para ver propiedades y en Imágenes de fondo marcamos cada una de las
 
 ![](./images/blender-infographic-1280-SM.png)
 
-[Chuletario de Blender](http://www.giudansky.com/design/51-blender-map)
-
-[Tutorial](https://www.instructables.com/id/Beginners-Guide-to-Blender/)
 
 [Tutoriales](https://www.blender.org/support/tutorials/)
 
-[Introducción a blender (cgcookie)](https://cgcookie.com/flow/introduction-to-blender/)
-
-[cgcookie](https://cgcookie.com/learn-blender/)
-
-[blenderguru](http://www.blenderguru.com/)
-
-[Guia para la versión 2.5](https://joaclintistgud.wordpress.com/2009/11/27/blender-guia-de-iniciacion-para-recien-llegados-adaptada-a-la-version-2-5/)
-
-### Videos:
-
-[Creando a partir de fotos una cabeza](https://www.youtube.com/watch?v=HODBe1adzUQ)
-
-[Diseñando una cabeza](https://www.youtube.com/watch?v=pQVfissJSe4)
-
-[Diseñando una camiseta](https://www.youtube.com/watch?v=Ih2EakutydA)
-
-[Diseñando ropa](https://www.youtube.com/results?search_query=blender+design+clothes)
-
-[Diseñando un zapato](https://www.youtube.com/watch?v=aV6AoxOkX8w)
-
-[Diseñando a Angelina Jolie](https://www.youtube.com/watch?v=Vu6jdSaSVyo)
