--- a/9.7.OpenScad.md
+++ b/9.7.OpenScad.md
@@ -1,30 +1,31 @@
 ## [OpenSCad](http://www.openscad.org/) 
 
 
-([Tutoriales](http://www.iearobotics.com/wiki/index.php?title=Obijuan_Academy#Tutoriales_Openscad))
-
 ![OpenSCad](./images/openscad-screen-gear.jpg)
 
-Ejemplos de [María de Tecnoloxia](https://tecnoloxia.org/openscad/)
+
+[OpenSCad](http://www.openscad.org/) es un software opensource de diseño algorítmico que nos permite generar piezas a partir de un programa, que usa un lenguaje similar a C++.
+
+Podemos instalarlo descargando desde su [página de descargas](http://openscad.org/downloads.html)
+
+Es muy útil para hacer diseños en los que hay partes repetivas, como esta (parde delos ejemplos de [María de Tecnoloxia](https://tecnoloxia.org/openscad/) )
+
 
 ![](https://tecnoloxia.org/wp-content/uploads/openscad_for_canicas.png)
 
-Tableta de chocolate
+O esta típica "Tableta de chocolate"
 
 ![](https://tecnoloxia.org/impresion3d/wp-content/uploads/sites/6/2021/05/openscad_panel.png)
 
-[Chuleta de openscad](http://openscad.org/cheatsheet/index.html)
+Vemos que a la derecha está la zona de programación y a la derecha vemos el diseño resultante
+
+Podemos ver las operaciones disponibles en esta [Chuleta](http://openscad.org/cheatsheet/index.html)
+
 
 ![](https://tecnoloxia.org/impresion3d/wp-content/uploads/sites/6/2021/05/openscad_sintaxe.png)
 
+Normalmente trabajaremos con piezas primitivas (poliedros, cilindros, esferas, etc..) a las que aplicamos transformaciones (movimiento, rotación, reescalado,...) y realizando operaciones lógicas entre ellos (intersección, unión, diferencia,...)
 
-[Polígonos](https://tecnoloxia.org/impresion3d/extrusion_poligonos/)
 
-[Figuras 3D](https://tecnoloxia.org/impresion3d/figuras-3d/)
 
-[Transformaciones y operaciones](https://tecnoloxia.org/impresion3d/transformacions/)
-
-[Bucles y repeticiones](https://tecnoloxia.org/impresion3d/bucles/)
-
-[Funciones](https://tecnoloxia.org/impresion3d/funcions/)
 
